# Env-V3

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  environment.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
