[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fedhealth-openenv"
version = "1.0.0"
description = "A privacy-preserving federated learning environment for multi-hospital disease prediction with RL agent orchestration — OpenEnv compliant."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FedHealth Team"},
]
keywords = ["federated-learning", "healthcare", "openenv", "reinforcement-learning", "differential-privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "websockets>=12.0",
    "torch>=2.1.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "pyyaml>=6.0.1",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/fedhealth/openenv"
Repository = "https://github.com/fedhealth/openenv"

[project.scripts]
server = "server.app:main"
fedhealth-inference = "inference:main"
fedhealth-server = "server.app:main"
openenv-server = "server.app:main"

[tool.setuptools.packages.find]
include = ["server*", "training*", "tasks*"]

[tool.setuptools]
py-modules = ["environment", "models", "reward", "inference"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
asyncio_mode = "auto"
